languages/montiarc-fe/src/test/resources/contextconditions/valid/ImportComponent.arc
package contextconditions.valid;

import contextconditions.valid.BumpThroughPut;

component ImportComponent {

    port
        in String stringIn,
        out String stringOut;

}